exports[`App snapshots 1`] = `
<div
  className="page">
  <div
    className="interactions">
    <div
      className="App">
      <form
        onSubmit={[Function]}>
        <input
          onChange={[Function]}
          type="text"
          value="redux" />
        <button
          type="submit">
          Search
        </button>
      </form>
      <div
        className="table" />
      <div
        className="interactions">
        <div>
          Loading ...
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button snapshots 1`] = `
<button
  className=""
  onClick={undefined}
  type="button">
  Test button
</button>
`;

exports[`Search snapshots 1`] = `
<form
  onSubmit={undefined}>
  <input
    onChange={undefined}
    type="text"
    value={undefined} />
  <button
    type="submit">
    Search
  </button>
</form>
`;

exports[`Table snapshots 1`] = `
<div
  className="table">
  <div
    className="table-row">
    <span>
      <a
        href={undefined}>
        1
      </a>
    </span>
    <span>
      1
    </span>
    <span>
      1
    </span>
    <span>
      2
    </span>
    <span>
      <button
        className="button-inline"
        onClick={[Function]}
        type="button">
        Dismiss
      </button>
    </span>
  </div>
  <div
    className="table-row">
    <span>
      <a
        href={undefined}>
        2
      </a>
    </span>
    <span>
      2
    </span>
    <span>
      1
    </span>
    <span>
      2
    </span>
    <span>
      <button
        className="button-inline"
        onClick={[Function]}
        type="button">
        Dismiss
      </button>
    </span>
  </div>
</div>
`;
